overlapping tags on home page fix

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -38,6 +38,10 @@ body {
   }
 }
 
+.featured-tag {
+  display: inline-block;
+}
+
 .new-btn-wrapper {
   margin-top: 10px;
   margin-bottom: 20px;
